# ProjectMannagee_2

./: .gitignore  GEMINI.md
backend/: __init__.py  config.py  main.py  pyproject.toml  pytest.ini
backend/agents/: agent.py  jira_agent.py
backend/agents/sub_agents/: __init__.py  jira_agent.py
backend/agents/sub_agents/cpa_agent/: agent.py
backend/agents/sub_agents/cpa_engine_agent/: agent.py
backend/agents/sub_agents/formatter_agent/: __init__.py  agent.py
backend/agents/sub_agents/formatter_agent/tools/: __init__.py  formatting_tools.py
backend/agents/sub_agents/github_agent/: agent.py
backend/agents/sub_agents/github_repo_agent/: agent.py
backend/agents/sub_agents/jira_agent/: agent.py
backend/agents/sub_agents/jira_cpa_agent/: agent.py
backend/agents/sub_agents/jira_sprint_agent/: agent.py
backend/app/: .workday_state.json  commands.py
backend/app/CPA/: cpa_core.py
backend/app/db/: database.py  db_loader.py  models.py  schema.sql
backend/scripts/: install_git_commit_msg_hook.py  test_cpa.py
backend/src/agents/: jira_agent.py
backend/src/tools/: jira_tool.py
backend/tests/: conftest.py  test_agents.py  test_commands.py  test_jira_eta_and_completion.py  test_main.py
backend/tools/cpa/: __init__.py  engine_tools.py
backend/tools/cpa/engine/: __init__.py  cpa.py  db.py  jira.py  project_graph.py  sprint_dependency.py  sprint_eta.py  sprint_timeline.py
backend/tools/github/: __init__.py  repo_tools.py
backend/tools/jira/: __init__.py  comment_tools.py  cpa_tools.py  sprint_tools.py  user_issues_tools.py
backend/tools/jira/hooks/: commit_msg_hook.py
(+31 files in other folders)
